# CoreWar

./: .gitmodules  CMakeLists.txt  author  ex.s
ASM/: Makefile  ex.s
ASM/include/: asm.h  op.h
ASM/src/: checks.c  cut_last.c  determine_codetype.c  ex.s  main.c  op.c  parse.c  read_file.c  valid_name_and_comment.c  validation.c
assembler/: Makefile
assembler/ASM/: Makefile~
assembler/include/: asm.h  op.h
assembler/src/: check_error.c  checks.c  cut_last.c  cuts.c  exec_code_to_byte.c  main.c  print_errors.c  read_file.c  tokens.c  write_info.c
corewar/: CMakeLists.txt
corewar/corewar/: CMakeLists.txt
corewar/corewar/includes/: corewar.h  corewar_defines.h  corewar_errors.h  corewar_parse_defines.h  corewar_settings.h  parse.h
corewar/corewar/srcs/: main.c
corewar/corewar/srcs/parse/: parse.c  parse_champion.c  parse_line.c  parse_options.c
corewar/includes/: corewar.h  defines.h
corewar/libft/srcs/: ft_atoibase.c
corewar/srcs/: corewar.c  parse.c  parse_champion.c  parse_champion_loop.c
libft/: libft.h
libftprintf/: Makefile
libftprintf/includes/: ft_printf.h  get_next_line.h  libft.h
libftprintf/libft/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  (+29 more)
(+60 files in other folders)
